Users interface socle

--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -20,7 +20,7 @@
                 <div class="sidebar-brand-icon">
                     <i class="fas fa-users"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Users<sup>V1.0</sup></div>
+                <div class="sidebar-brand-text mx-3">Admin <sup>V1.0</sup></div>
             </a>
 
             <hr class="sidebar-divider my-0">
