--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -2,15 +2,68 @@
 
 {% block title "Espace personnel" %}
 
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('assets/datatables/dataTables.bootstrap4.min.css') }}">
+{% endblock %}
+
 {% block body %}
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
         <h1 class="h3 mb-0 text-gray-800"><i class="fas fa-users text-gray-400"></i> <span>Gestions des utilisateurs</span></h1>
-        
+        <div class="d-sm-inline-block">
+            <a href="#todo" class="d-sm-inline-block btn btn-sm btn-success shadow-sm">
+                <i class="fas fa-user-plus fa-sm text-white-50"></i> Créer un utilisateur
+            </a>
+        </div>
     </div>
 
     <hr>
 
+    <div class="card shadow mb-4">
+        <div class="card-body">
+            <div class="table-responsive">
+                <table class="table table-sm table-striped table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Username</th>
+                        <th>Email</th>
+                        <th>Actif</th>
+                        <th>Dernière connexion</th>
+                        <th>Actions</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for user in users %}
+                        <tr>
+                            <td>{{ user.id }}</td>
+                            <td>{{ user.username }}</td>
+                            <td>{{ user.email }}</td>
+                            <td>{{ user.enabled }}</td>
+                            <td>{{ user.lastLogin|date('d/m/Y H:i:s') }}</td>
+                            <td>
+                                <a href="#todo" class="btn btn-sm btn-warning" title="Modifier ce contrat">
+                                    <i class="fas fa-pen"></i>
+                                </a>
 
+                                <form method="post" action="#todo" style="display:inline-block;" onsubmit="return confirm('Êtes-vous sûr ?')">
+                                    <input type="hidden" name="_method" value="DELETE">
+                                    {#<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ contrat_xdsl.id) }}">#}
+                                    <button class="btn btn-sm btn-danger" title="Supprimer cet utilisateur"><i class="fas fa-trash"></i></button>
+                                </form>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('assets/datatables/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ asset('assets/datatables/dataTables.bootstrap4.min.js') }}"></script>
+    <script src="{{ asset('assets/datatables/plateforme.js') }}"></script>
 {% endblock %}
