--- a/templates/user/password.html.twig
+++ b/templates/user/password.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="d-sm-flex align-items-center justify-content-between mb-2">
-        <h1 class="h3 mb-0 text-gray-800">Changement du mot de passe de l'utilisateur {{ user.username }}</h1>
+        <h1 class="h3 mb-0 text-gray-200">Changement du mot de passe de l'utilisateur {{ user.username }}</h1>
     </div>
 
     <nav aria-label="breadcrumb">
@@ -20,7 +20,7 @@
     <form action="#" method="post" enctype="multipart/form-data">
         <div class="card shadow mb-4">
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <div class="h6 m-0 font-weight-bold text-primary">Changement du mot de passe</div>
+                <div class="h6 m-0 font-weight-bold text-light">Changement du mot de passe</div>
             </div>
             <div class="card-body">
                 <div class="form-group">
