--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -9,7 +9,7 @@
 {% block body %}
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800"><i class="fas fa-users text-gray-400"></i> <span>Gestions des utilisateurs</span></h1>
+        <h1 class="h3 mb-0 text-gray-200"><i class="fas fa-users text-gray-400"></i> <span>Gestions des utilisateurs</span></h1>
         <div class="d-sm-inline-block">
             <a href="{{ path('user.new') }}" class="d-sm-inline-block btn btn-sm btn-success shadow-sm">
                 <i class="fas fa-user-plus fa-sm text-white-50"></i> Créer un utilisateur
@@ -24,7 +24,7 @@
     <div class="card shadow mb-4">
         <div class="card-body">
             <div class="table-responsive">
-                <table class="table table-sm table-striped table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <table class="table table-sm table-striped" id="dataTable" width="100%" cellspacing="0">
                     <thead>
                     <tr>
                         <th>ID</th>
