--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -61,7 +61,7 @@
 
                         {# Documentation #}
                         <li class="nav-item dropdown no-arrow mx-1">
-                            <a class="nav-link dropdown-toggle" href="/api/doc" title="Aide en ligne">
+                            <a class="nav-link dropdown-toggle" href="/api/doc" title="Documentation de l'API">
                                 <i class="fas fa-info-circle fa-fw"></i>
                             </a>
                         </li>
