--- a/templates/front.html.twig
+++ b/templates/front.html.twig
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="{{ asset('assets/plateforme/css/front.css') }}">
         {% block stylesheets %}{% endblock %}
     </head>
-    <body class="bg-gradient-dark">
+    <body class="bg-black">
     
         <div class="container">
 
