--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -55,6 +55,10 @@
                     <label class="form-check-label" for="ROLE_TELECOM_COMMERCIAL">ROLE_TELECOM_COMMERCIAL</label>
                 </div>
                 <hr>
+                <p>Plateforme E-signature</p>
+                <hr>
+                <p>Plateforme d'envoie de courriers</p>
+                <hr>
                 <p>Fiche de frais</p>
                 <div class="form-check">
                     <input class="form-check-input" name="roles[]" type="checkbox" id="ROLE_FRAIS_ADMIN" value="ROLE_FRAIS_ADMIN">
