--- a/public/assets/plateforme/css/sb-admin-2.css
+++ b/public/assets/plateforme/css/sb-admin-2.css
@@ -6992,6 +6992,16 @@ button.bg-dark:focus {
   background-color: #42444e !important;
 }
 
+.bg-black {
+  background-color: #000 !important;
+}
+
+a.bg-black:hover, a.bg-black:focus,
+button.bg-black:hover,
+button.bg-black:focus {
+  background-color: #42444e !important;
+}
+
 .bg-white {
   background-color: #fff !important;
 }
