--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -16,7 +16,7 @@
 
             <ul class="navbar-nav bg-dark sidebar sidebar-dark accordion" id="accordionSidebar">
 
-            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+            <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('back.index') }}">
                 <div class="sidebar-brand-icon">
                     <i class="fas fa-users"></i>
                 </div>
@@ -72,7 +72,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{ app.user.username }}</span>
-                                <img class="img-profile rounded-circle" src="https://avatars0.githubusercontent.com/u/6449381?s=460&v=4">
+                                <i class="fas fa-user-circle fa-2x"></i>
                             </a>
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
                                 <a class="dropdown-item" href="{{ path('logout') }}" title="Se déconnecter">
