--- a/templates/back.html.twig
+++ b/templates/back.html.twig
@@ -18,9 +18,9 @@
 
             <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{{ path('back.index') }}">
                 <div class="sidebar-brand-icon">
-                    <i class="fas fa-users"></i>
+                    <i class="fas fa-id-badge"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">Admin <sup>V1.0</sup></div>
+                <div class="sidebar-brand-text mx-3">Heidi <sup>V1.0</sup></div>
             </a>
 
             <hr class="sidebar-divider my-0">
